--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,36 +1,34 @@
-#Included:
-#                 1. Install and Download Dependencies
-#                 2. Compile Contracts
-#                 3. Deploy a Contract to the Local network
-#                 4. Test the locally deployed Contract in the local network.
-#                 5. Run all tests
-#                 6. slither integration
+# #Included:
+# #                 1. Install and Download Dependencies
+# #                 2. Compile Contracts
+# #                 3. Deploy a Contract to the Local network
+# #                 4. Test the locally deployed Contract in the local network.
+# #                 5. Run all tests
+# #                 6. slither integration
 
-name: Contract Linting
+# name: Contract Linting
 
-on: [push]
+# on: [push]
 
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+# jobs:
+#   lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+#       - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#           cache: "yarn"
 
-      - name: Install Node Dependencies
-        run: yarn --prefer-offline
+#       - name: Install Node Dependencies
+#         run: yarn --prefer-offline
 
-      # - name: Run Test
-      #   run: yarn test
-      - name: Lint Contracts
-        run: yarn lint:contracts
-        # continue-on-error: true
+#       - name: Lint Contracts
+#         run: yarn lint:contracts
+#         # continue-on-error: true
 
-      # - name: Run Coverage Checks
-      #   run: yarn coverage
-      #   continue-on-error: true
+#       # - name: Run Coverage Checks
+#       #   run: yarn coverage
+#       #   continue-on-error: true
