--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -25,8 +25,6 @@ jobs:
         run: yarn compile
       - name: Deploy Contracts Locally
         run: yarn deploy
-      - name: Interact With Contracts
-        run: yarn interact
 
   lint:
     runs-on: ubuntu-latest
@@ -38,22 +36,25 @@ jobs:
         run: yarn lint:contracts
 
   tests:
+    name: unit tests
+    needs: compile-and-deploy-contracts
     runs-on: ubuntu-latest
     steps:
+      - name: Wait for compilation to succeed
       - uses: actions/checkout@v3
       - name: Set up environment
         uses: ./.github/actions/setup
       - name: Run Test
         run: yarn test
 
-  coverage:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up environment
-        uses: ./.github/actions/setup
-      - name: Run Coverage Checks
-        run: yarn coverage
+  # coverage:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up environment
+  #       uses: ./.github/actions/setup
+  #     - name: Run Coverage Checks
+  #       run: yarn coverage
 
   audit:
     runs-on: ubuntu-latest
