--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -37,7 +37,7 @@ jobs:
 
   tests:
     name: unit tests
-    needs: compile-and-deploy-contracts
+    # needs: compile-and-deploy-contracts
     runs-on: ubuntu-latest
     steps:
       - name: Wait for compilation to succeed
