--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -25,6 +25,8 @@ jobs:
         run: yarn compile
       - name: Deploy Contracts Locally
         run: yarn deploy
+      # - name: Interact With Contracts
+      #   run: yarn interact
 
   lint:
     runs-on: ubuntu-latest
@@ -37,10 +39,10 @@ jobs:
 
   tests:
     name: unit tests
-    # needs: compile-and-deploy-contracts
+    needs: compile-and-deploy-contracts
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for compilation to succeed
+      # - name: Wait for compilation to succeed
       - uses: actions/checkout@v3
       - name: Set up environment
         uses: ./.github/actions/setup
