fix final failing test

--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "fairside-main-v2",
+  "name": "fairside-contractsv2",
+  "license": "MIT",
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "audit-ci": "audit-ci --config audit-ci.json",
-    "deploy": "npx hardhat run scripts/fe_deploy.js",
-    "interact": "npx hardhat run scripts/SDeploy.js",
+    "deploy": "npx hardhat run scripts/fe_deploy.ts",
+    "interact": "npx hardhat run scripts/SDeploy.ts",
     "coverage": "npx hardhat coverage",
     "lint:contracts": "npx solhint 'contracts/**/*.sol'",
-    "test:fsdToken": "npx hardhat test ./test/fsdToken.test.js",
-    "test:fsdMinter": "npx hardhat test ./test/fsdMinter.test.js",
-    "test:fsdNetwork": "npx hardhat test ./test/network/fsdNetwork.test.js"
+    "test:FSD": "npx hardhat test ./test/token/FSD.test.ts",
+    "test:FSDMinter": "npx hardhat test ./test/token/minting/FSDMinter.test.ts",
+    "test:FSDNetwork": "npx hardhat test ./test/network/FSDNetwork.test.ts",
+    "test:FSDMinting.CWL": "npx hardhat test ./test/token/minting/FSDMinting.CWL.test.ts",
+    "test:FSDMinting.KOL": "npx hardhat test ./test/token/minting/FSDMinting.KOL.test.ts",
+    "test:FSDMinting.premine": "npx hardhat test ./test/token/minting/FSDMinting.premine.test.ts",
+    "test:FSDMinting.VCWL": "npx hardhat test ./test/token/minting/FSDMinting.VCWL.test.ts",
+    "test:FSDMinting.final": "npx hardhat test ./test/token/minting/FSDMinting.final.test.ts"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@ethersproject/abi": "^5.6.4",
+    "@ethersproject/providers": "^5.6.8",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^9.1.1",
     "axios": "^0.26.1",
     "chai": "^4.3.6",
     "dotenv": "^10.0.0",
@@ -29,19 +42,36 @@
     "eslint-plugin-promise": "^5.2.0",
     "ethereum-waffle": "^3.4.4",
     "ethereumjs-util": "^7.1.4",
-    "ethers": "^5.6.4",
-    "hardhat": "^2.9.3",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "lodash": "^4.17.21",
     "prettier": "^2.6.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
+    "prettier-plugin-solidity": "^1.0.0-dev.23",
     "solhint": "^3.3.7",
-    "solidity-coverage": "^0.7.20"
+    "solidity-coverage": "^0.7.21",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "3.4.0",
+    "@openzeppelin/contracts": "4.7.1",
     "@openzeppelin/test-helpers": "^0.5.13",
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0"
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "bignumber.js": "^9.0.2",
+    "hardhat-contract-sizer": "^2.6.1"
+  },
+  "resolutions": {
+    "underscore": "^1.13.4",
+    "node-fetch": "^2.6.7",
+    "lodash": "^4.17.20",
+    "async": "^2.6.4",
+    "uuid": "^7.0.2",
+    "web3": "^1.7.4",
+    "solidity-coverage": "^0.7.21",
+    "got": "^11.8.5",
+    "yargs-parser": "^5.0.1"
   }
 }
